fix: hardcode qaris, move discover above targets, fix flicker/ruku/memorize

--- a/src/app/components/tafseer-modal.scss
+++ b/src/app/components/tafseer-modal.scss
@@ -62,6 +62,7 @@
     font-size: 1.3rem;
     line-height: 2.2;
     text-align: center;
+    direction: rtl;
     margin: 0;
   }
 
